bsd-platform-apps/test-app/test-app.service.yml
apiVersion: v1
kind: Service
metadata:
  name: test-app
  namespace: apps
spec:
  selector:
    app: test-app
  ports:
    - name: http
      port: 5000
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
