bsd-platform-apps/test-app/test-app.ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /test-app
        pathType: Prefix
        backend:
          service:
            name: test-app
            port:
              number: 80
